--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "resolve": "1.6.0",
+    "shortid": "^2.2.11",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
@@ -49,10 +50,8 @@
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3"
