--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,25 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Yearly",
+  "name": "Yearly - What will you do this year?",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "images/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    }
+    },
+		{
+			"src": "images/icon-192.png",
+			"sizes": "192x192",
+			"type": "image/png"
+		},
+		{
+			"src": "images/icon-512.png",
+			"sizes": "512x512",
+			"type": "image/png"
+		}
   ],
-  "start_url": "./index.html",
+  "start_url": "/dashboard",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#0f132f",
+  "background_color": "#0f132f"
 }
