Added nprogress and delete day function
* Added nprogress for loading bars and stuff
* Added a delete day function in activedayentry for future use

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,7 @@
   ],
   "start_url": "/dashboard",
   "display": "standalone",
+	"orientation": "portrait",
   "theme_color": "#0f132f",
   "background_color": "#0f132f"
 }
