--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "jwt-decode": "^2.2.0",
+    "nprogress": "^0.2.0",
     "object-assign": "4.1.1",
     "path": "^0.12.7",
     "postcss-flexbugs-fixes": "3.2.0",
