--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chalk": "1.1.3",
     "compress": "^0.99.0",
     "css-loader": "0.28.7",
+    "date-fns": "^1.29.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "express": "^4.16.3",
