--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
+    "react-toastify": "^4.1.0",
     "redux": "^4.0.0",
     "resolve": "1.6.0",
     "shortid": "^2.2.11",
