--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autosize": "^4.0.2",
     "date-fns": "^1.29.0",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.9.3",
@@ -12,7 +13,7 @@
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.0.4",
+    "react-scripts": "^2.1.3",
     "react-toastify": "^4.1.0",
     "shortid": "^2.2.11"
   },
